@@ -1,13 +1,3 @@
-def getDependencies(config) {
-    return config.getAllDependencies().collect {
-        def res = it.group + ':' + it.name + ':' + it.version
-        if(!it.excludeRules.isEmpty()) {
-            res += "(" + it.excludeRules.collect { it.group + ':' + it.module }.join(',') + ")"
-        }
-        return res
-    }
-}
-
 allprojects {
     group               = 'co.paralleluniverse.comsat.bench.http.server'
     version             = '0.1.0-SNAPSHOT'
@@ -48,7 +38,6 @@ allprojects {
 
     configurations {
         quasar
-        capsule
     }
 
     configurations.all {
@@ -88,54 +77,11 @@ allprojects {
     //    maven { url 'https://maven.java.net/content/repositories/snapshots' }
     }
 
-    test {
-        beforeTest { desc ->
-            logger.quiet("Running test: " + desc)
-        }
-
-        afterTest { desc, result ->
-            if(result.resultType == TestResult.ResultType.FAILURE) {
-                logger.quiet("Failed test ${desc.name} [${desc.className}] with exception: ${result.exception}")
-                if(result.exception != null) {
-                    result.exception.printStackTrace()
-                }
-            }
-        }
-    }
-
     dependencies {
         compile "co.paralleluniverse:quasar-core:${quasarVer}${classifier}"
-
-        capsule "co.paralleluniverse:capsule:$capsuleVersion"
 
         quasar "co.paralleluniverse:quasar-core:${quasarVer}${classifier}@jar"
 
         testCompile "junit:junit:$junitVer"
     }
-
-    task fatCapsule(type: Jar, dependsOn: jar) {
-        archiveName = "${project.name}-fatcap.jar"
-
-        from jar // embed our application jar
-
-        from { configurations.runtime } // embed dependencies
-
-        from(configurations.capsule.collect { zipTree(it) }) { include 'Capsule.class' } // we just need the single Capsule class
-
-        manifest {
-            attributes (
-                'Premain-Class'       : 'Capsule',
-                'Main-Class'          : 'Capsule',
-                'Application-Name'    : project.name,
-                'Application-Version' : project.version,
-                'Application-Class'   : 'Main',
-                'JVM-Args'            : '-server -XX:+AggressiveOpts -XX:-UseGCOverheadLimit -XX:+DisableExplicitGC -Xms=1G -Xmx=1G', //  -XX:+UseParallelOldGC -XX:+UseConcMarkSweepGC -XX:+UseG1GC -XX:MaxGCPauseMillis=10 -XX:GCTimeRatio=999
-                'System-Properties'   : 'co.paralleluniverse.fibers.detectRunawayFibers=false', // 'co.paralleluniverse.fibers.verifyInstrumentation'
-                'Java-Agents'         : getDependencies(configurations.quasar).iterator().next(),
-                'Repositories'        : 'central https://oss.sonatype.org/content/repositories/snapshots'
-            )
-        }
-    }
-
-    defaultTasks 'fatCapsule'
 }
